--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
-baseurl: '/gsp-fire/'
+baseurl: '/'
 permalink: pretty
-title: 'Jekyll Serif'
+title: 'GSP Fire Safety and Systems'
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
   mobile_height: "32px"
   mobile_width: "32px"
   desktop: "images/logo/logo.svg"
-  desktop_height: "32px"
-  desktop_width: "120px"
+  desktop_height: "64px"
+  desktop_width: "80px"
 
 home: 
   limit_services: 6
