--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'jekyllserif@example.com'
-phone: '1800 123 000'
+email: 'sanjay@gspfire.com'
+phone: '+91 97277 46972'
 contact_button_link: 'contact'
