--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,21 +1,15 @@
 main:
-  - name: "Services"
-    url: "/services/"
-    weight: 2
-  - name: "Team"
-    url: "/team/"
-    weight: 3
+  # - name: "Products & Services"
+  #   url: "/#our-products-and-services/"
+  #   weight: 1
   - name: "About"
     url: "/about/"
-    weight: 4
+    weight: 2
   - name: "Contact"
     url: "/contact/"
-    weight: 5
+    weight: 3
 
 footer:
-  - name: "Home"
-    url: "/"
-    weight: 1
   - name: "Contact"
     url: "/contact/"
-    weight: 2
+    weight: 1
