--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,7 +17,8 @@ jobs:
         with:
           ruby-version: '3.2'
           bundler-cache: true
-
+      - name: Install Jekyll and Bundler
+        run: gem install jekyll bundler
       # Updated workflow snippet:
       - name: Build the Jekyll Site
         run: |
