[fix] change github auth to personal access token, read more
The problem with this deployment was regarding the access permission. Since the GSP repo is hosted on an Organization account, it requires a different setup.

I changed the code as you can see in the pages.yml file from github access token to PAT.
Then I generated a new Personal Accees Token (PAT) by going to my profile > settings > developer settings > access tokens (classic) and selected Repo and Actions options for permissions.

Then I headed to GSP repo settings > secrets > created a secret named PAT, filled in the value and that's it.

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          personal_token: ${{ secrets.PAT }}  # Changed from github_token to personal_token
           publish_dir: ./_site
           cname: gspfire.com
